Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96285

QProcess can't be restarted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.0, 6.2.1, 6.3.0 Alpha
    • 6.2.0 Beta2
    • Core: Other
    • None
    • Windows
    • 4e0082a9cacfdfd0c43e6105274bc0d41dd18801 (qt/qtbase/dev) 197f6ab7312551907c0e4ba522a28a9d56cd9acf (qt/qtbase/6.2) c5a79d6dbc563719cfc71a2169cfa01156e10307 (qt/qtbase/6.1) a1f6721fc8874d0c15b723db9908d090cd422585 (qt/qtbase/6.2.0)

      If the example application is built with MSVC2019 64bit, the QProcess can't be restarted.

      To reproduce
      1) build the example in release with MSVC2019.
      2) run the project
      3) Go to task manager and kill the cmd.exe process
      -> the process is restarted
      4) Repeat kill 2-3 more times - the application crashes:

      ProcessTest::processFinished  30
      ProcessTest::processFinished  29
      21:31:46: The program has unexpectedly finished.
      

      In debug it hardly crashes.
      Not reproducible with MinGW.

        1. hellotr.zip
          3 kB
          alexey89
        2. 2021-09-08 17-53-39.mp4
          1.18 MB
          alexey89
        3. qprocess_stack.txt
          2 kB
          alexey89
        For Gerrit Dashboard: QTBUG-96285
        # Subject Branch Project Status CR V

            alex1973tr Alex Trotsenko
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes